--- a/src/styles/Footer.css
+++ b/src/styles/Footer.css
@@ -1,30 +1,3 @@
 .Footer {
-  margin-top: 100px;
-  padding-top: 20px;
-  padding-bottom: 40px;
-  background-color: rgb(255, 255, 255, 0.65);
-  text-align: center;
-  width: 100vw;
-  position: relative;
-  left: 50%;
-  right: 50%;
-  margin-left: -50vw;
-  margin-right: -50vw;
-}
-
-.footer-content {
-  padding-left: 20%;
-  padding-right: 20%;
-}
-
-@media screen and (max-width: 800px) {
-  .footer-content {
-    padding-left: 7%;
-    padding-right: 7%;
-  }
-}
-
-.credit {
-  margin: 0;
-  padding: 0;
+  background-color: red;
 }
