--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -1,19 +1,3 @@
 .Header {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-}
-
-.Header .links {
-  display: flex;
-  justify-content: space-between;
-  column-gap: 20px;
-}
-
-.Header .links img {
-  min-width: 34px;
-}
-
-.Header img {
-  max-width: 34px;
+  background-color: blue;
 }
