--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -1,8 +1,35 @@
 .Header {
+  position: sticky;
+  top: 0;
+  padding-block: 24px;
+  width: 100%;
+  background: rgba(95, 101, 108, 0.8);
+  box-shadow: 0px 4px 24px rgba(0, 0, 0, 0.25);
+  backdrop-filter: blur(24px);
+  /* Note: backdrop-filter has minimal browser support */
+  border-radius: 0 0 24px 24px;
+  z-index: 99;
 }
 
 .Header ul {
   margin: 0;
   padding: 0;
   list-style: none;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.Header ul a {
+  text-decoration: none;
+  font-family: Lato;
+  font-weight: bold;
+
+  color: #ffffff;
+  opacity: 0.8;
+  transition: 0.3s;
+}
+
+.Header ul a:hover {
+  opacity: 1;
 }
