--- a/src/styles/Projects.css
+++ b/src/styles/Projects.css
@@ -4,4 +4,12 @@
 .Projects h2 {
   margin: 0;
   padding: 0;
+  text-align: center;
+}
+
+.Projects .Content {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  gap: 32px;
 }
