--- a/src/styles/Skills.css
+++ b/src/styles/Skills.css
@@ -4,4 +4,16 @@
 .Skills h2 {
   padding: 0;
   margin: 0;
+  text-align: center;
+}
+
+.Skills .CRT {
+  background: #303439;
+}
+
+.Skills .Content {
+  display: flex;
+  justify-content: flex-start;
+  flex-wrap: wrap;
+  gap: 24px;
 }
