--- a/src/styles/Whoami.css
+++ b/src/styles/Whoami.css
@@ -1,7 +1,35 @@
 .Whoami {
+  text-align: center;
+}
+
+.Whoami .Paragraph {
+  font-family: VT323;
+  font-style: normal;
+  font-weight: normal;
+  display: flex;
+  align-items: center;
+  text-align: justify;
+  font-size: 32px;
+
+  color: #00ff47;
+
+  text-shadow: 0px 0px 16px #00ff47;
 }
 
 .Whoami h2 {
   margin: 0;
   padding: 0;
+  text-align: center;
+}
+
+.Whoami .CRT {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 4vw;
+}
+
+.Whoami .LegosImg {
+  width: 100%;
+  max-width: 312px;
 }
