--- a/src/styles.css
+++ b/src/styles.css
@@ -34,7 +34,7 @@ body {
   width: 100%;
   height: 100%;
 
-  border: 0.1px solid white;
+  border: 1px solid white;
   border-radius: 1px;
   box-sizing: border-box;
 
@@ -224,15 +224,18 @@ body {
   text-align: end;
 }
 
-#flip-hint-anim {
+#flip-hint-anim-container {
   width: 40px;
-
+  height: 40px;
   position: absolute;
-  right: 0.9em;
-  bottom: 0.9em;
+  right: 1em;
+  bottom: 1em;
   z-index: 1;
 
   cursor: default;
+
+  perspective: 100px;
+  perspective-origin: center;
 
   -webkit-user-drag: none;
   user-select: none;
@@ -241,6 +244,45 @@ body {
   -ms-user-select: none;
 }
 
-.card:has(#flip-hint-anim:hover) {
+@keyframes flip-anim {
+  0% {
+    transform: scale(1);
+  }
+  3% {
+    transform: scale(0.7);
+  }
+  10% {
+    transform: scale(1);
+  }
+  15% {
+    transform: rotateY(0deg);
+  }
+  35% {
+    transform: rotateY(180deg);
+  }
+  100% {
+    transform: rotateY(180deg);
+  }
+}
+
+#flip-hint-anim {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  border: 1px solid white;
+  border-radius: 1px;
+
+  transform: rotateY(0deg);
+
+  animation-name: flip-anim;
+  animation-duration: 4s;
+  animation-delay: 2s;
+  animation-iteration-count: infinite;
+
+  transition-property: box-shadow;
+  transition: 0.2s;
+}
+
+#flip-hint-anim:hover {
   box-shadow: 0px 0px 4px 2px rgba(255, 255, 255, 0.8);
 }
