--- a/src/styles.css
+++ b/src/styles.css
@@ -1,27 +1,27 @@
 @font-face {
   font-family: 'CMU Serif';
-  src: url('assets/fonts/computer_modern/cmunrm.ttf') format('truetype');
+  src: url('../assets/fonts/computer_modern/cmunrm.ttf') format('truetype');
   font-weight: normal;
   font-style: normal;
 }
 
 @font-face {
   font-family: 'CMU Serif';
-  src: url('assets/fonts/computer_modern/cmunti.ttf') format('truetype');
+  src: url('../assets/fonts/computer_modern/cmunti.ttf') format('truetype');
   font-weight: normal;
   font-style: italic;
 }
 
 @font-face {
   font-family: 'CMU Serif';
-  src: url('assets/fonts/computer_modern/cmunbx.ttf') format('truetype');
+  src: url('../assets/fonts/computer_modern/cmunbx.ttf') format('truetype');
   font-weight: bold;
   font-style: normal;
 }
 
 @font-face {
   font-family: 'CMU Serif';
-  src: url('assets/fonts/computer_modern/cmunbi.ttf') format('truetype');
+  src: url('../assets/fonts/computer_modern/cmunbi.ttf') format('truetype');
   font-weight: bold;
   font-style: italic;
 }
