--- a/src/styles.css
+++ b/src/styles.css
@@ -62,7 +62,7 @@ body {
   max-width: 800px;
   margin: auto;
   font-size: 12pt;
-  line-height: 1.6;
+  line-height: 1.5;
   text-align: justify;
 }
 
@@ -79,7 +79,9 @@ li {
 
 h1 {
   margin-top: 0;
-  margin-bottom: 0;
+  margin-bottom: 0.3em;
+  text-align: left;
+  line-height: 1.2;
 }
 
 a {
